--- a/lib/dune
+++ b/lib/dune
@@ -1,6 +1,6 @@
 (library
  (name xenstore_transport)
  (public_name xenstore_transport)
- (libraries lwt xenstore xenstore.client lwt.unix)
+ (libraries lwt xenstore lwt.unix)
  (wrapped false)
  (flags :standard -safe-string))
